# itsp-todo-server

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.circleci/: config.yml
migrations/2019-06-04-104417_create_tasks/: down.sql  up.sql
src/: api.rs  app.rs  db.rs  main.rs  model.rs  schema.rs
tests/: docker-compose.yml  lib.rs
