[package]
name = "itsp-todo-server"
version = "0.1.0"
authors = ["Takeshi Kaneko <target.ark@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
log = "0.4"
env_logger = "0.6"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.14"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.4"
features = ["postgres", "chrono", "r2d2"]
